# ShineraEngine

./: CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
include/Shinera/: Engine.h  EngineContext.h
include/Shinera/fonts/: BMPFont.h
include/Shinera/render/: Renderable.h  Renderer.h
include/Shinera/scenes/: Scene.h  SceneManager.h
include/Shinera/shaders/: CompiledShaderStore.h  ShaderProgramStore.h
include/Shinera/sprites/: RenderableSprite.h  SpriteStore.h
include/Shinera/utils/: Vectors.h
include/Shinera/window/: WindowManager.h
res/: font.json  sega.json
src/: Engine.cpp
src/fonts/: BMPFont.cpp
src/shaders/: CompiledShaderStore.cpp  ShaderProgramStore.cpp
src/sprites/: RenderableSprite.cpp  SpriteStore.cpp
src/window/: WindowManager.cpp
tests/include/scenes/: ShineraScene.h
tests/src/: main.cpp
tests/src/scenes/: ShineraScene.cpp
